--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-MI Digital Agency Tracking  
+MI Digital Agency Tracking
+
+
+
+<script>
+
+var mi_tracking_url = '.midigitalagency.com';
+var mi_pardot_url = 'go.midigitalagency.com';
+
+(function(){
+
+	s = document.createElement('script'),
+	s.src = '//tracking.midigitalagency.com/tracking.js';
+	document.body.appendChild(s);
+
+})();
+
+</script>
+
+
 </body>
 </html>
