--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ var mi_pardot_url = 'go.midigitalagency.com';
 
 (function(){
 
-	s = document.createElement('script'),
+	s = document.createElement('script');
 	s.src = '//tracking.midigitalagency.com/tracking.js';
 	document.body.appendChild(s);
 
