--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
 MI Digital Agency Tracking
 
+<form action="http://go.midigitalagency.com/l/44052/2014-06-17/3fsp">
+
+	<input type="hidden" value="" name="first-source">
+	<input type="hidden" value="" name="first-medium">
+	<input type="hidden" value="" name="first-term">
+	<input type="hidden" value="" name="first-content">
+	<input type="hidden" value="" name="first-campaign">
+	<input type="hidden" value="" name="last-source">
+	<input type="hidden" value="" name="last-medium">
+	<input type="hidden" value="" name="last-term">
+	<input type="hidden" value="" name="last-content">
+	<input type="hidden" value="" name="last-campaign">
+
+</form>
 
 
 <script>
