--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ MI Digital Agency Tracking
 	var ln = 'last-campaign';
 
 	s = document.createElement('script');
+	s.async = 1;
 	s.src = '//tracking.midigitalagency.com/tracking.js';
 	document.body.appendChild(s);
 
