--- a/index.html
+++ b/index.html
@@ -27,24 +27,22 @@ MI Digital Agency Tracking
 
 <script>
 
-	var tracking_domain = '.midigitalagency.com';
-	var pardot_url = 'go.midigitalagency.com';
+var tracking_domain = '.midigitalagency.com';
+var pardot_url = 'go.midigitalagency.com';
 
-	var fs = 'first-source';
-	var fm = 'first-medium';
-	var ft = 'first-term';
-	var fc = 'first-content';
-	var fn = 'first-campaign';
+var fs = 'first-source';
+var fm = 'first-medium';
+var ft = 'first-term';
+var fc = 'first-content';
+var fn = 'first-campaign';
 
-	var ls = 'last-source';
-	var lm = 'last-medium';
-	var lt = 'last-term';
-	var lc = 'last-content';
-	var ln = 'last-campaign';
+var ls = 'last-source';
+var lm = 'last-medium';
+var lt = 'last-term';
+var lc = 'last-content';
+var ln = 'last-campaign';
 
 (function(){
-
-
 
 	s = document.createElement('script');
 	s.async = 1;
@@ -52,6 +50,8 @@ MI Digital Agency Tracking
 	document.body.appendChild(s);
 
 })();
+
+miTrackRefferal();
 
 </script>
 
