--- a/index.html
+++ b/index.html
@@ -27,32 +27,26 @@ MI Digital Agency Tracking
 
 <script>
 
-var tracking_domain = '.midigitalagency.com';
-var pardot_url = 'go.midigitalagency.com';
-
-var fs = 'first-source';
-var fm = 'first-medium';
-var ft = 'first-term';
-var fc = 'first-content';
-var fn = 'first-campaign';
-
-var ls = 'last-source';
-var lm = 'last-medium';
-var lt = 'last-term';
-var lc = 'last-content';
-var ln = 'last-campaign';
+var mi_td = '.midigitalagency.com';
+var mi_pu = 'go.midigitalagency.com';
+var mi_fs = 'first-source';
+var mi_fm = 'first-medium';
+var mi_ft = 'first-term';
+var mi_fc = 'first-content';
+var mi_fn = 'first-campaign';
+var mi_ls = 'last-source';
+var mi_lm = 'last-medium';
+var mi_lt = 'last-term';
+var mi_lc = 'last-content';
+var mi_ln = 'last-campaign';
 
 (function(){
-
-	s = document.createElement('script');
-	s.async = 1;
-	s.src = '//tracking.midigitalagency.com/tracking.js';
-	//document.body.appendChild(s);
-	document.body.insertBefore(s, document.currentScript);
-
+s=document.createElement('script');
+s.async=1;
+s.src='//tracking.midigitalagency.com/tracking.js';
+n=document.getElementsByTagName('script')[0];
+n.parentNode.insertBefore(s, n);
 })();
-
-miTrackRefferal();
 
 </script>
 
