--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ MI Digital Agency Tracking
 </form>
 
 
-<script>
+<script type="text/javascript">
 
 var mi_td = '.midigitalagency.com';
 var mi_pu = 'go.midigitalagency.com';
