--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ var mi_ln = 'last-campaign';
 (function(){
 s=document.createElement('script');
 s.async=1;
-s.src='//tracking.midigitalagency.com/tracking.js';
+s.src='//midigitalagency.github.io/tracking/tracking.js';
 n=document.getElementsByTagName('script')[0];
 n.parentNode.insertBefore(s, n);
 })();
