--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ MI Digital Agency Tracking
 
 <script type="text/javascript">
 
-var mi_td = '.midigitalagency.com';
-var mi_pu = 'go.midigitalagency.com';
+var mi_td = '.github.io';
+var mi_pu = 'go.github.io';
 var mi_fs = 'first-source';
 var mi_fm = 'first-medium';
 var mi_ft = 'first-term';
