--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@ s=document.createElement('script');
 s.async=1;
 s.src='//midigitalagency.github.io/tracking/tracking.js';
 n=document.getElementsByTagName('script')[0];
-n.parentNode.insertBefore(s, n);
+//n.parentNode.insertBefore(s, n);
+
+document.body.appendChild(s);
+
 })();
 
 </script>
