--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ MI Digital Agency Tracking
 
 <script type="text/javascript">
 
-var mi_td = 'github.io';
+var mi_td = 'midigitalagency.github.io';
 var mi_pu = 'go.github.io';
 var mi_fs = 'first-source';
 var mi_fm = 'first-medium';
