--- a/track.html
+++ b/track.html
@@ -45,12 +45,9 @@ var mi_ln = 'Last_Campaign';
 (function(){
 s=document.createElement('script');
 s.async=1;
-s.src='//midigitalagency.github.io/tracking/tracking.js';
+s.src='//midigitalagency.github.io/tracking/referral.js';
 n=document.getElementsByTagName('script')[0];
-
 n.parentNode.insertBefore(s, n);
-//document.body.appendChild(s);
-
 })();
 
 </script>
