--- a/track-2.html
+++ b/track-2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-MI Digital Agency Tracking <a href="track-2.html">link</a>
+MI Digital Agency Tracking <a href="track.html">link</a>
 
 <form action="http://go.midigitalagency.com/l/44052/2014-06-17/3fsp">
 
