--- a/track-2.html
+++ b/track-2.html
@@ -39,7 +39,7 @@ n.parentNode.insertBefore(s,n);
 })();
 
 var miReferralTracker = {
-td: 'midigitalagency.github.io',
+td: 'midigitalagency.com',
 pu: 'go.midigitalagency.com',
 fs: 'utmz_source',
 fm: 'utmz_medium',
